# mkpki

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
src/: certificate.rs  lib.rs  main.rs
