[package]
name = "mkpki"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
bitvec = "1.0.1"
bytes = "1.7.1"
chrono = "0.4.38"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pem-rfc7468 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rasn = "0.15.3"
rasn-pkix = "0.15.3"
rsa = "0.9.6"
sha2 = "0.10.8"

[profile.dev]
opt-level = 3
